@@ -377,7 +377,6 @@ MANPAGES_ALIAS += \
 	man/sd_bus_error_set_errno.3 \
 	man/sd_bus_error_set_errnof.3 \
 	man/sd_bus_message_append_array_iovec.3 \
-	man/sd_bus_message_append_array_memfd.3 \
 	man/sd_bus_message_append_array_space.3 \
 	man/sd_bus_message_append_string_iovec.3 \
 	man/sd_bus_message_append_string_space.3 \
@@ -438,7 +437,6 @@ man/sd_bus_error_set_const.3: man/sd_bus_error.3
 man/sd_bus_error_set_errno.3: man/sd_bus_error.3
 man/sd_bus_error_set_errnof.3: man/sd_bus_error.3
 man/sd_bus_message_append_array_iovec.3: man/sd_bus_message_append_array.3
-man/sd_bus_message_append_array_memfd.3: man/sd_bus_message_append_array.3
 man/sd_bus_message_append_array_space.3: man/sd_bus_message_append_array.3
 man/sd_bus_message_append_string_iovec.3: man/sd_bus_message_append_string_memfd.3
 man/sd_bus_message_append_string_space.3: man/sd_bus_message_append_string_memfd.3
@@ -573,9 +571,6 @@ man/sd_bus_error_set_errnof.html: man/sd_bus_error.html
 	$(html-alias)
 
 man/sd_bus_message_append_array_iovec.html: man/sd_bus_message_append_array.html
-	$(html-alias)
-
-man/sd_bus_message_append_array_memfd.html: man/sd_bus_message_append_array.html
 	$(html-alias)
 
 man/sd_bus_message_append_array_space.html: man/sd_bus_message_append_array.html
