@@ -199,7 +199,6 @@ global:
         sd_bus_message_append_array;
         sd_bus_message_append_array_space;
         sd_bus_message_append_array_iovec;
-        sd_bus_message_append_array_memfd;
         sd_bus_message_append_string_space;
         sd_bus_message_append_string_iovec;
         sd_bus_message_append_string_memfd;
