@@ -2525,74 +2525,6 @@ _public_ int sd_bus_message_append_array_iovec(
         return 0;
 }
 
-_public_ int sd_bus_message_append_array_memfd(sd_bus_message *m,
-                                               char type,
-                                               sd_memfd *memfd) {
-        _cleanup_close_ int copy_fd = -1;
-        struct bus_body_part *part;
-        ssize_t align, sz;
-        uint64_t size;
-        void *a;
-        int r;
-
-        if (!m)
-                return -EINVAL;
-        if (!memfd)
-                return -EINVAL;
-        if (m->sealed)
-                return -EPERM;
-        if (!bus_type_is_trivial(type))
-                return -EINVAL;
-        if (m->poisoned)
-                return -ESTALE;
-
-        r = sd_memfd_set_sealed(memfd, true);
-        if (r < 0)
-                return r;
-
-        copy_fd = sd_memfd_dup_fd(memfd);
-        if (copy_fd < 0)
-                return copy_fd;
-
-        r = sd_memfd_get_size(memfd, &size);
-        if (r < 0)
-                return r;
-
-        align = bus_type_get_alignment(type);
-        sz = bus_type_get_size(type);
-
-        assert_se(align > 0);
-        assert_se(sz > 0);
-
-        if (size % sz != 0)
-                return -EINVAL;
-
-        if (size > (uint64_t) (uint32_t) -1)
-                return -EINVAL;
-
-        r = sd_bus_message_open_container(m, SD_BUS_TYPE_ARRAY, CHAR_TO_STR(type));
-        if (r < 0)
-                return r;
-
-        a = message_extend_body(m, align, 0, false);
-        if (!a)
-                return -ENOMEM;
-
-        part = message_append_part(m);
-        if (!part)
-                return -ENOMEM;
-
-        part->memfd = copy_fd;
-        part->sealed = true;
-        part->size = size;
-        copy_fd = -1;
-
-        m->header->body_size += size;
-        message_extend_containers(m, size);
-
-        return sd_bus_message_close_container(m);
-}
-
 _public_ int sd_bus_message_append_string_memfd(sd_bus_message *m, sd_memfd *memfd) {
         _cleanup_close_ int copy_fd = -1;
         struct bus_body_part *part;
